--- a/CSVHelperAndJsonDemo/CSVHelperAndJsonDemo.csproj
+++ b/CSVHelperAndJsonDemo/CSVHelperAndJsonDemo.csproj
@@ -7,4 +7,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="CsvHelper" Version="30.0.1" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
+  </ItemGroup>
+
 </Project>
